Opened 12 years ago

Closed 12 years ago

#3812 closed defect (fixed)

Crash when not specifying an encoder for the segment muxer

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avformat
Version: git-master Keywords: crash SIGSEGV regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

FFmpeg crashes since ccc25378 if no encoder was specified when using the segment muxer, related to ticket #2236

(gdb) r -f lavfi -i testsrc -f segment -map 0 out
Starting program: ffmpeg_g -f lavfi -i testsrc -f segment -map 0 out
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
ffmpeg version N-65086-g65746bf Copyright (c) 2000-2014 the FFmpeg developers
  built on Jul 29 2014 12:18:56 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 92.101 / 52. 92.101
  libavcodec     55. 71.100 / 55. 71.100
  libavformat    55. 49.100 / 55. 49.100
  libavdevice    55. 13.102 / 55. 13.102
  libavfilter     4. 11.102 /  4. 11.102
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
[New Thread 0x7ffff1d26700 (LWP 10097)]
[New Thread 0x7ffff1525700 (LWP 10098)]
[New Thread 0x7ffff0d24700 (LWP 10099)]
[New Thread 0x7ffff0523700 (LWP 10100)]
[New Thread 0x7fffefd22700 (LWP 10101)]
[New Thread 0x7fffef521700 (LWP 10102)]
[New Thread 0x7fffeed20700 (LWP 10103)]
[New Thread 0x7fffee51f700 (LWP 10104)]
[New Thread 0x7fffedd1e700 (LWP 10105)]
Input #0, lavfi, from 'testsrc':
  Duration: N/A, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: rawvideo (RGB[24] / 0x18424752), rgb24, 320x240 [SAR 1:1 DAR 4:3], 25 tbr, 25 tbn, 25 tbc

Program received signal SIGSEGV, Segmentation fault.
av_guess_codec (fmt=0x0, short_name=short_name@entry=0x0,
    filename=filename@entry=0x1a3c258 "out", mime_type=mime_type@entry=0x0,
    type=AVMEDIA_TYPE_VIDEO) at libavformat/format.c:167
167             if (!strcmp(fmt->name, "image2") || !strcmp(fmt->name, "image2pipe")) {
(gdb) bt
#0  av_guess_codec (fmt=0x0, short_name=short_name@entry=0x0,
    filename=filename@entry=0x1a3c258 "out", mime_type=mime_type@entry=0x0,
    type=AVMEDIA_TYPE_VIDEO) at libavformat/format.c:167
#1  0x000000000047326c in choose_encoder (s=s@entry=0x1a3c220, ost=ost@entry=0x1a3cf80,
    o=0x7fffffffd650, o=0x7fffffffd650) at ffmpeg_opt.c:1039
#2  0x0000000000474957 in new_output_stream (o=0x7fffffffd650, oc=0x1a3c220,
    type=AVMEDIA_TYPE_VIDEO, source_index=0) at ffmpeg_opt.c:1077
#3  0x00000000004756e3 in new_video_stream (o=o@entry=0x7fffffffd650, oc=0x1a3c220,
    source_index=<optimized out>) at ffmpeg_opt.c:1273
#4  0x0000000000477b80 in open_output_file (o=o@entry=0x7fffffffd650,
    filename=0x7fffffffe21f "out") at ffmpeg_opt.c:1920
#5  0x0000000000472fc4 in open_files (inout=inout@entry=0xec0d05 "output",
    open_file=open_file@entry=0x476570 <open_output_file>, l=<optimized out>,
    l=<optimized out>) at ffmpeg_opt.c:2650
#6  0x000000000047a302 in ffmpeg_parse_options (argc=argc@entry=10,
    argv=argv@entry=0x7fffffffdd28) at ffmpeg_opt.c:2694
#7  0x000000000046b4e8 in main (argc=10, argv=0x7fffffffdd28) at ffmpeg.c:3815
(gdb) print fmt
$1 = (AVOutputFormat *) 0x0

Change History (1)

comment:1 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.